feat: players can add soldiers

--- a/static/index.html
+++ b/static/index.html
@@ -12,6 +12,7 @@
     </head>
     <body>
       <canvas id="canvas"></canvas>
+      <button onclick="addSoldier()">Add Basic Soldier</button>      
     </body>
     <script src="/static/game.js"></script>
   </html>
